fix: update background color for improved contrast and readability

--- a/src/index.css
+++ b/src/index.css
@@ -11,14 +11,14 @@
 
   color-scheme: light dark;
   color: rgba(15, 15, 15, 0.87);
-  background-color: hsl(230, 16%, 69%);
+  background-color: hsl(230, 20%, 88%);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   --radius: 0.625rem;
-  --background: hsl(230, 16%, 69%);
+  --background: hsl(230, 20%, 88%);
   --foreground: hsl(0, 0%, 0%);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
